# GUIC

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.e6b1a5c  README.md
cmake/: ConfigOpenCV.cmake
cmake/toolchains/: i686-w64-mingw32.cmake  x86_64-linux-gnu.cmake  x86_64-w64-mingw32.cmake
dev/: GUIC.xcf  OpenCorrGUI.xcf
ext/opencv-4.10.0/include/opencv2/: opencv.hpp  opencv_modules.hpp
ext/qt-everywhere-opensource-src-5.6.3-modified/: MODIFICATIONS.txt
ext/qt-everywhere-opensource-src-5.6.3-modified/qtbase/src/corelib/io/: qfilesystemengine_win.cpp
ext/qt-everywhere-opensource-src-5.6.3-modified/qtbase/src/corelib/tools/: qsimd_p.h
ext/qt-everywhere-opensource-src-5.6.3-modified/qtbase/src/network/socket/: qlocalserver_win.cpp  qnativesocketengine_win.cpp
ext/qt-everywhere-opensource-src-5.6.3-modified/qtbase/src/platformsupport/fontdatabases/mac/: qfontengine_coretext.mm
src/: CMakeLists.txt  aboutwindow.cpp  aboutwindow.h  aboutwindow.ui  colormapwidget.cpp  colormapwidget.h  colorpickerbutton.h  imagelistitem.h  imagelistwidget.h  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  projecttab.cpp  projecttab.h  projecttab.ui  sceneview.cpp  sceneview.h
src/model/: imagelistitemdata.cpp  imagelistitemdata.h
src/window/about/: aboutwindow.cpp  aboutwindow.h  aboutwindow.ui
src/window/main/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/window/main/widget/: colormapwidget.cpp  colormapwidget.h  colorpickerbutton.cpp  colorpickerbutton.h  imagelistitemwidget.h  imagelistwidget.h  projecttab.cpp  projecttab.h  projecttab.ui  sceneview.cpp  sceneview.h
src/window/solverconfig/: solverconfigwindow.cpp  solverconfigwindow.h  solverconfigwindow.ui
